liber: overlay: Improve face unlock for popup camera
Change-Id: If254cbf1d8af1a1565305997edcc1b4152ee779c

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -164,4 +164,7 @@
          during initialization when the setting is still null. -->
     <bool name="config_dozeAlwaysOnEnabled">false</bool>
 
+     <!-- Enable face auth only when swiping security view -->
+     <bool name="config_faceAuthOnlyOnSecurityView">true</bool>
+
 </resources>
